# AAAI-Scholar-Analyzer

./: .gitignore
.claude/: settings.local.json
.claude/skills/aminer/: SKILL.md  aminer_api.py
.claude/skills/aminer-paper/: SKILL.md  aminer_paper_api.py
.claude/skills/conference-meta/: SKILL.md
.claude/skills/verify-crawl/: SKILL.md
agent_scripts/: add_source_urls.py  agent_utils.py  common_utils.py  enrich_scholar_data.py  fetch_aminer_ids.py  fetch_paper_data.py  fetch_scholar_data.py  generate_authors_data.py  label_scholar_data.py  pyproject.toml  sync_scholar_data_via_api.py  verify_aminer_ids.py
agent_scripts/papers/: README.md  USAGE_EXAMPLES.md  build_pipeline.py  enrich_authors_aminer.py  enrich_papers_aminer.py  generate_indexes.py  merge_tracks.py
agent_scripts/scholars/: aminer_scholar_utils.py  compress_avatars.py  download_avatars.py  enrich_scholars_aminer.py  fetch_email_addresses.py
config/: labels.json
website/: .dockerignore
website/backend/: .env.example  .gitignore  config.py  main.py  pyproject.toml
website/data-proxy/: .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
website/data-proxy/routes/: aminer.py
website/data-proxy/services/: aminer_service.py  avatar_service.py  cache_service.py  email_service.py
website/data-proxy/utils/: __init__.py  http_client.py
website/docker/: backend.Dockerfile  data-proxy.Dockerfile  docker-compose.yml
website/frontend/: .env.development  index.html  package-lock.json  vite.config.ts
(+25 files in other folders)
