[project]
name = "aaai-agent-scripts"
version = "0.1.0"
description = "Agent scripts for AAAI scholar information processing"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
